chore: add safe local runtime configuration